--- a/_posts/1970-01-01-01-about.md
+++ b/_posts/1970-01-01-01-about.md
@@ -3,9 +3,6 @@ title: About
 order: 2
 ---
 
-{{ content }}
-
-
 <!-- Start About area -->
 <div id="about" class="about-area area-padding">
     <div class="container">
@@ -22,7 +19,7 @@ order: 2
                 <div class="well-left">
                     <div class="single-well">
                         <a href="#">
-                            <img src="img/about/1.png" alt="">
+                            <img src="img/about/3.jpeg" alt="">
                         </a>
                     </div>
                 </div>
