--- a/_posts/1970-01-01-01-stats.md
+++ b/_posts/1970-01-01-01-stats.md
@@ -15,7 +15,7 @@ order: 4
           <div class="col-xs-12 col-sm-3 col-md-3 text-center">
             <div class="single-skill">
               <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="99.5" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                <input type="text" class="knob" value="0" data-rel="99.5" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
                 <h3 class="progress-h4">System Uptime</h3>
               </div>
             </div>
@@ -25,7 +25,7 @@ order: 4
           <div class="col-xs-12 col-sm-3 col-md-3 text-center">
             <div class="single-skill">
               <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="85" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                <input type="text" class="knob" value="0" data-rel="85" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
                 <h3 class="progress-h4">OpenSource Components</h3>
               </div>
             </div>
@@ -35,7 +35,7 @@ order: 4
           <div class="col-xs-12 col-sm-3 col-md-3 text-center">
             <div class="single-skill">
               <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="3" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                <input type="text" class="knob" value="0" data-rel="3" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
                 <h3 class="progress-h4">Marketing Bullstuffs</h3>
               </div>
             </div>
@@ -45,7 +45,7 @@ order: 4
           <div class="col-xs-12 col-sm-3 col-md-3 text-center">
             <div class="single-skill">
               <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="0" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                <input type="text" class="knob" value="0" data-rel="0" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
                 <h3 class="progress-h4">Hidden Costs</h3>
               </div>
             </div>
