--- a/_posts/1970-01-01-01-about.md
+++ b/_posts/1970-01-01-01-about.md
@@ -1,8 +1,9 @@
 ---
 title: About
+layout: about
+imagelnk: img/about/3.jpeg
 order: 2
 ---
-
 <!-- Start About area -->
 <div id="about" class="about-area area-padding">
     <div class="container">
@@ -19,7 +20,7 @@ order: 2
                 <div class="well-left">
                     <div class="single-well">
                         <a href="#">
-                            <img src="img/about/3.jpeg" alt="">
+                            <img src="{{ page.imagelnk }}" alt="">
                         </a>
                     </div>
                 </div>
@@ -32,16 +33,16 @@ order: 2
                         <h4 class="sec-head">Who We Are</h4>
                         </a>
                         <p>
-                            Integrated Solutions is simply audocious: A company set to succeed by sheer virtue. 
-                            Our competetive advantage is that we take pride in our work and values. 
-                            We believe in goodness, and wish to facilitate a better world through the manifestations of our values.
-                            While most our experience is in the healthcare and telecommunications industries we're purists and as such ready to tacle technical challenges wherever they arise. 
-                            To the pure, all things are pure. Just as a rose by any other name would smell as sweet, 
-                            a bucket of transistors will behave roughly the same in a mainframe, the 'cloud', or as the brains of a self-driving automobile assuming relevant paramaters are controlled.</br>
-                            We're not your typical consulting firm or solutions provider, <a href="https://link.waveapps.com/rn8j9w-jh4qyj">buy some time to speak with an expert</a>, 
-                            skip the consulting to start playing with a <a href="https://link.waveapps.com/5uv7c7-yftq6g">self-service package</a>, 
-                            or jump over to our 24/7 self-service <a href="https://sdxdomains.com">Domain Name and Cloud Hosting store</a> for your website needs. 
-                            We won't try to collect your data or sell you anything, in fact you won't even hear from us until after you've bought some <a href="https://link.waveapps.com/rn8j9w-jh4qyj">time</a>.
+Integrated Solutions is simply audocious: A company set to succeed by sheer virtue. 
+Our competetive advantage is that we take pride in our work and values. 
+We believe in goodness, and wish to facilitate a better world through the manifestations of our values.
+While most our experience is in the healthcare and telecommunications industries we're purists and as such ready to tacle technical challenges wherever they arise. 
+To the pure, all things are pure. Just as a rose by any other name would smell as sweet, 
+a bucket of transistors will behave roughly the same in a mainframe, the 'cloud', or as the brains of a self-driving automobile assuming relevant paramaters are controlled.</br>
+We're not your typical consulting firm or solutions provider, <a href="https://link.waveapps.com/rn8j9w-jh4qyj">buy some time to speak with an expert</a>, 
+skip the consulting to start playing with a <a href="https://link.waveapps.com/5uv7c7-yftq6g">self-service package</a>, 
+or jump over to our 24/7 self-service <a href="https://sdxdomains.com">Domain Name and Cloud Hosting store</a> for your website needs. 
+We won't try to collect your data or sell you anything, in fact you won't even hear from us until after you've bought some <a href="https://link.waveapps.com/rn8j9w-jh4qyj">time</a>.
                         </p>
                     </div>
                 </div>
@@ -51,3 +52,4 @@ order: 2
     </div>
 </div>
 <!-- End About area -->
+
