--- a/_posts/1970-01-01-01-stats.md
+++ b/_posts/1970-01-01-01-stats.md
@@ -1,59 +1,22 @@
 ---
+layout: stats
 title: Stats
 order: 4
+stats:
+  - order: 1
+    value: 99.9
+    heading: System Uptime
+    content:
+  - order: 2
+    value: 85
+    heading: OpenSource Components
+    content:
+  - order: 3
+    value: 15
+    heading: Marketing Bullstuffs
+    content:
+  - order: 4
+    value: 0
+    heading: Hidden Costs
+    content:
 ---
-
-<!-- our-skill-area start -->
-<div class="our-skill-area fix hidden-sm">
-  <div class="test-overly"></div>
-  <div class="skill-bg area-padding-2">
-    <div class="container">
-      <!-- section-heading end -->
-      <div class="row">
-        <div class="skill-text">
-          <!-- single-skill start -->
-          <div class="col-xs-12 col-sm-3 col-md-3 text-center">
-            <div class="single-skill">
-              <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="99.5" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
-                <h3 class="progress-h4">System Uptime</h3>
-              </div>
-            </div>
-          </div>
-          <!-- single-skill end -->
-          <!-- single-skill start -->
-          <div class="col-xs-12 col-sm-3 col-md-3 text-center">
-            <div class="single-skill">
-              <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="85" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
-                <h3 class="progress-h4">OpenSource Components</h3>
-              </div>
-            </div>
-          </div>
-          <!-- single-skill end -->
-          <!-- single-skill start -->
-          <div class="col-xs-12 col-sm-3 col-md-3 text-center">
-            <div class="single-skill">
-              <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="3" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
-                <h3 class="progress-h4">Marketing Bullstuffs</h3>
-              </div>
-            </div>
-          </div>
-          <!-- single-skill end -->
-          <!-- single-skill start -->
-          <div class="col-xs-12 col-sm-3 col-md-3 text-center">
-            <div class="single-skill">
-              <div class="progress-circular">
-                <input type="text" class="knob" value="0" data-rel="0" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#de4949" data-thickness=".20" data-readonly="true" disabled>
-                <h3 class="progress-h4">Hidden Costs</h3>
-              </div>
-            </div>
-          </div>
-          <!-- single-skill end -->
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- our-skill-area end -->
