switching to knight theme, previous theme saved under _layouts_default folder, rollback should be as simple as renaming folders

--- a/_posts/1970-01-01-01-team.md
+++ b/_posts/1970-01-01-01-team.md
@@ -21,6 +21,6 @@ members:
     role: Orchestrator
     pict: img/team/3.jpg
     links:
-      - fa-icon: linkedin
+      - icon: linkedin
         url: https://www.linkedin.com/in/ardyhash/
 ---
