--- a/_posts/1970-01-01-01-services.md
+++ b/_posts/1970-01-01-01-services.md
@@ -2,30 +2,32 @@
 layout: services
 title: Services
 
+image-link: assets_knight/img/services.jpg
+
 services:
   - heading: Automation
-    fa-icon: terminal
+    icon: terminal
     content: Our Subject Matter Experts may help your organization automate using dormant capacity in existing resources
 
   - heading: Better Consulting
-    fa-icon: line-chart
+    icon: line-chart
     content: We study the situation and requirements to provide the best tailored solution, no cookie cutter templates here. <a href="https://link.waveapps.com/rn8j9w-jh4qyj">Buy time</a> to learn more.
 
   - heading: Domain + eMail
-    fa-icon: laptop
+    icon: laptop
     content: Hop on over to Pop into our 24/7 <a href="https://sdxdomains.com">One Stop Shop</a> where All Basic Cloud, Domain, E-Mail Functionalities, and Website needs may be purchased on dedicated or shared plans.
 
   - heading: Virtual PBX
-    fa-icon: phone
+    icon: phone
     content: Our bread and butter is providing <a href="https://link.waveapps.com/5uv7c7-yftq6g">Cloud based Virtual Private Branch Exchange IP communication services.</a> Buy a toll free number to start receiving calls today, or port in your existing number for a seamless migration.
 
   - heading: Professional Oversight
-    fa-icon: video-camera
+    icon: video-camera
     content: Vetting vendors or evaluating engineers can be challenging, let our ethical experts act as your trusted advocates.
   - heading: Virtual CXO
-    fa-icon: briefcase
+    icon: briefcase
     content: Leverage decades of experience without retaining the associated payroll by consuming leadership insights on an as needed basis.
   - heading: Party
-    fa-icon: futbol-o
+    icon: futbol-o
     content: Given the opportunity we will play foosball with you at an event.
 ---
