--- a/_posts/1970-01-01-01-faq.md
+++ b/_posts/1970-01-01-01-faq.md
@@ -30,7 +30,7 @@ missionvisionvalues:
 faq:
   - order: 1
     question: How can we contact you?
-    answer: <p>Find one of the links on this page to <a href="https://link.waveapps.com/rn8j9w-jh4qyj">buy time</a>, click it, and submit a payment. Please make sure to leave accurate contact information when submitting payment, refunds will not be issued.</p>
+    answer: Find one of the links on this page to buy time, click it, and submit a payment with contact information, we'll be in touch. Please make sure to leave accurate contact information when submitting payment, refunds will not be issued.
   - order: 2
     question: Why are payments non-refundable?
     answer: We believe in transparency and setting expectations up front. Accepting online payments legally and responsibly has an associated cost, and because we wish to provide the best value to our members we don't artificially inflate prices to cover the costs of dealing with the masses. Instead, to eliminate the cost of time spent catering to tourists who are unready or unwilling to join our community we simply filter out that population so we may focus our attention on catering to members who understand and respect the value of time.
