--- a/_posts/1970-01-01-01-services.md
+++ b/_posts/1970-01-01-01-services.md
@@ -11,23 +11,21 @@ services:
 
   - heading: Better Consulting
     icon: line-chart
-    content: We study the situation and requirements to provide the best tailored solution, no cookie cutter templates here. <a href="https://link.waveapps.com/rn8j9w-jh4qyj">Buy time</a> to learn more.
+    content: We study the situation and requirements to provide the best tailored solution, no cookie cutter templates here. <a href="https://link.waveapps.com/rn8j9w-jh4qyj">Buy time</a> to learn more
 
   - heading: Domain + eMail
     icon: laptop
-    content: Hop on over to Pop into our 24/7 <a href="https://sdxdomains.com">One Stop Shop</a> where All Basic Cloud, Domain, E-Mail Functionalities, and Website needs may be purchased on dedicated or shared plans.
+    content: Hop on over to Pop into our 24/7 <a href="https://sdxdomains.com">One Stop Shop</a> where All Basic Cloud, Domain, E-Mail Functionalities, and Website needs may be purchased on dedicated or shared plans
+
+  - heading: Virtual CXO
+    icon: briefcase
+    content: Leverage decades of experience without retaining the associated payroll by consuming leadership insights on an as needed basis
 
   - heading: Virtual PBX
     icon: phone
-    content: Our bread and butter is providing <a href="https://link.waveapps.com/5uv7c7-yftq6g">Cloud based Virtual Private Branch Exchange IP communication services.</a> Buy a toll free number to start receiving calls today, or port in your existing number for a seamless migration.
+    content: Our bread and butter is providing <a href="https://link.waveapps.com/5uv7c7-yftq6g">Cloud based Virtual Private Branch Exchange IP communication services.</a> Buy a toll free number to start receiving calls today, or port in your existing number for a seamless migration
 
   - heading: Professional Oversight
     icon: video-camera
-    content: Vetting vendors or evaluating engineers can be challenging, let our ethical experts act as your trusted advocates.
-  - heading: Virtual CXO
-    icon: briefcase
-    content: Leverage decades of experience without retaining the associated payroll by consuming leadership insights on an as needed basis.
-  - heading: Party
-    icon: futbol-o
-    content: Given the opportunity we will play foosball with you at an event.
+    content: Vetting vendors or evaluating engineers can be challenging, let our ethical experts act as your trusted advocates
 ---
