--- a/_pages/1970-01-01-01-services.md
+++ b/_pages/1970-01-01-01-services.md
@@ -2,7 +2,7 @@
 layout: services
 title: Services
 
-image-link: img/services.jpeg
+img: img/services.jpeg
 
 services:
   - heading: Automation
@@ -28,4 +28,21 @@ services:
   - heading: Professional Oversight
     icon: video-camera
     content: Vetting vendors or evaluating engineers can be challenging, let our ethical experts act as your trusted advocates
+
+featured:
+  - heading: Targetting Lightbulb Moments
+    content: Ideas are a dime a dozen, our value generating ideas hit the mark, and frankly we don't care which executive yesman takes a fall.
+    img: knight_assets/img/featured-1.png
+
+  - heading: Driving Decisions with Data
+    content: In God we trust, all other must bring data.
+    img: knight_assets/img/featured-2.png
+
+  - heading: Post Deployment Support
+    content: We don't just deploy and ditch, our solutions are designed to be low maintenance and intuitive, however should you opt into support we won't leave you high and dry.
+    img: knight_assets/img/featured-3.png
+
+  - heading: Pay only for what you use
+    content: Seriously, we don't beleive in paying customers subsidizing growth
+    img: knight_assets/img/featured-4.png
 ---
